--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.billyjulius</groupId>
-    <artifactId>testlink-alterra</artifactId>
+    <artifactId>testlink-helper</artifactId>
     <version>1.0.0</version>
 
     <dependencies>
