--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.billyjulius</groupId>
     <artifactId>testlink-helper</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.1-beta</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
